grafana/grafana-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ui-ingress
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.home.jonahsserver.com`)
      kind: Rule
      services:
        - name: prometheus-grafana
          namespace: monitoring
          port: 80
  tls:
    secretName: grafana-certificate-secret
